@@ -14,6 +14,7 @@ rmlint (2.6.1-2) UNRELEASED; urgency=medium
     - Simplify LFS build rules.
   * Update debian/copyright.
   * Build with Debhelper compat level 11.
+  * Link instances of jquery to packaged version.
 
  -- Carlos Maddela <e7appew@gmail.com>  Tue, 01 Aug 2017 15:51:53 +1000
 
